# OTSec

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  results.json  run_otsec.py
.pybuild/cpython3_3.13_otsec/: otsec-0.1.1-py3-none-any.whl
.pybuild/cpython3_3.13_otsec/scripts/: otsec
debian/: control  copyright  files  otsec.1  otsec.manpages  otsec.postinst.debhelper  otsec.prerm.debhelper  otsec.substvars  rules  watch
debian/otsec/DEBIAN/: control  md5sums  postinst  prerm
debian/otsec/usr/lib/python3/dist-packages/otsec-0.1.1.dist-info/: METADATA
src/otsec/: cli.py
src/otsec/core/: banner.py  discovery.py  shell.py  vuln_db.py
src/otsec/core/injectors/: modbus.py
src/otsec/data/: vulns.yaml
